# suave_planta

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_docker_files.sh  entrypoint.sh  package.xml  suave_planta.repos
config/: README.md  exp1_analysis_config.yml  exp1_runner_config.yml  exp2_analysis_config.yml  exp2_runner_config.yml  exp3_analysis_config.yml  exp3_runner_config.yml  extended_exp1_analysis_config.yml  extended_exp1_runner_config.yml  extended_exp2_analysis_config.yml  extended_exp2_runner_config.yml  extended_exp3_analysis_config.yml  extended_exp3_runner_config.yml  plansys2_params.yaml  planta_exp1_runner_config.yml  planta_exp2_runner_config.yml  planta_exp3_runner_config.yml  runner_config.yml
graphs/: suave_domain.dot
include/suave_planning/: action_reconfigure.hpp  action_start_robot.hpp  suave_plansys_controller.hpp
include/suave_planta/: action_reconfigure.hpp  action_start_robot.hpp  suave_planta_controller.hpp
launch/: exp1_analysis.launch.py  exp1_suave_runner.launch.py  exp2_analysis.launch.py  exp2_suave_runner.launch.py  exp3_analysis.launch.py  exp3_suave_runner.launch.py  extended_exp1_suave_runner.launch.py  extended_exp2_analysis.launch.py  extended_exp2_suave_runner.launch.py  extended_exp3_analysis.launch.py  extended_exp3_suave_runner.launch.py  suave_base.launch.py  suave_planning.launch.py  suave_planta.launch.py  suave_planta_extended.launch.py  suave_runner_launch.py
owl/: catalog-v001.xml  suave.owl  suave_extended.owl
pddl/: suave_domain.pddl  suave_domain_created.pddl  suave_domain_extended.pddl  suave_problem.pddl  suave_problem_created.pddl  suave_problem_extended.pddl
results/suave/exp1/: bt_suave.csv  metacontrol_suave.csv  none_suave.csv  planta_suave.csv  random_suave.csv  rosa_bt_suave.csv  suave_analysis_distance_inspected.csv  suave_analysis_mean_reaction_time.csv  suave_analysis_time_search_pipeline.csv
results/suave/exp2/: bt_suave.csv  metacontrol_suave.csv  none_suave.csv  planta_suave.csv  random_suave.csv  rosa_bt_suave.csv  suave_analysis_distance_inspected.csv  suave_analysis_mean_reaction_time.csv  suave_analysis_time_search_pipeline.csv
results/suave/exp3/: bt_suave.csv  metacontrol_suave.csv  none_suave.csv  planta_suave.csv  random_suave.csv  rosa_bt_suave.csv  suave_analysis_distance_inspected.csv  suave_analysis_mean_reaction_time.csv  suave_analysis_time_search_pipeline.csv
results/suave_extended/exp1/: bt_suave_extended.csv  planta_suave_extended.csv  rosa_bt_suave_extended.csv
results/suave_extended/exp2/: bt_suave_extended.csv  planta_suave_extended.csv  rosa_bt_suave_extended.csv  suave_analysis_distance_inspected.csv  suave_analysis_mean_reaction_time.csv  suave_analysis_time_search_pipeline.csv
results/suave_extended/exp3/: bt_suave_extended.csv  planta_suave_extended.csv  rosa_bt_suave_extended.csv  suave_analysis_distance_inspected.csv  suave_analysis_mean_reaction_time.csv  suave_analysis_time_search_pipeline.csv
src/: action_inspect_pipeline.cpp  action_recharge.cpp  action_reconfigure.cpp  action_search_pipeline.cpp  action_start_robot.cpp  suave_plansys_controller.cpp  suave_planta_controller.cpp
