<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>suave_planning</name>
  <version>0.0.0</version>
  <description>PDDL-based managing system for SUAVE</description>
  <maintainer email="g.rezendesilva@tudelft.nl">Gustavo Rezende</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>suave</depend>
  <depend>suave_msgs</depend>
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
